// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Places when limit is negative should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "min": "take must not be less than 0",
      },
      "property": "take",
      "target": Object {
        "skip": 0,
        "take": -1,
      },
      "value": -1,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List Places when limit is not a number should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "max": "take must not be greater than 50",
        "min": "take must not be less than 0",
      },
      "property": "take",
      "target": Object {
        "skip": 0,
        "take": null,
      },
      "value": null,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List Places when limit is provided should succeed 1`] = `
Object {
  "items": Array [
    Object {
      "address": "1915 Uzma Court",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "6bf9374f-8abc-5942-b52e-fff076137298",
      "rating": 4.61,
      "reviewCount": 0,
      "title": "Little China",
    },
    Object {
      "address": "39 Coko Turnpike",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "2d688467-2116-5d95-9195-13083b904496",
      "rating": 3.9,
      "reviewCount": 0,
      "title": "Chapter",
    },
  ],
  "total": 20,
}
`;

exports[`List Places when limit is too large should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "max": "take must not be greater than 50",
      },
      "property": "take",
      "target": Object {
        "skip": 0,
        "take": 9000,
      },
      "value": 9000,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List Places when offset is negative should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "min": "skip must not be less than 0",
      },
      "property": "skip",
      "target": Object {
        "skip": -1,
        "take": 10,
      },
      "value": -1,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List Places when offset is not a number should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "min": "skip must not be less than 0",
      },
      "property": "skip",
      "target": Object {
        "skip": null,
        "take": 10,
      },
      "value": null,
    },
  ],
  "statusCode": 400,
}
`;

exports[`List Places when offset is provided should succeed 1`] = `
Object {
  "items": Array [
    Object {
      "address": "1355 Pogol Parkway",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "08347a44-d09d-58c6-b198-163b9a0ed423",
      "rating": 3.84,
      "reviewCount": 0,
      "title": "The Mountain Vine",
    },
    Object {
      "address": "1230 Cejet Key",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "2230ab56-ca08-55d2-8a82-8ef007547c31",
      "rating": 3.78,
      "reviewCount": 0,
      "title": "The Silk Whale",
    },
    Object {
      "address": "1187 Weskut Ridge",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "d3973942-133b-55e4-920e-7b0033ab9d38",
      "rating": 3.75,
      "reviewCount": 0,
      "title": "The Noodle Farmer",
    },
    Object {
      "address": "1467 Huzwas Highway",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "8242a55b-5a9d-5ca9-b296-eed08dcf2897",
      "rating": 3.57,
      "reviewCount": 0,
      "title": "Amigos",
    },
    Object {
      "address": "134 Medmon Path",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "6b0ceb1b-e72c-5ef8-b0c6-c54455b5aba7",
      "rating": 3.53,
      "reviewCount": 0,
      "title": "Rogue",
    },
    Object {
      "address": "375 Uciwa Loop",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "55b62c9d-d3f6-5973-80cc-ca2744b0c1a6",
      "rating": 3.42,
      "reviewCount": 0,
      "title": "The Honor Goat",
    },
    Object {
      "address": "1006 Laet Manor",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "dc1884c7-35da-5973-9893-f902839ff6ff",
      "rating": 3.35,
      "reviewCount": 0,
      "title": "The Locket",
    },
    Object {
      "address": "332 Ruvow Path",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "821ea0ca-77af-5dd5-a15f-176fd4ce23a2",
      "rating": 3.12,
      "reviewCount": 0,
      "title": "The Dairy Laguna",
    },
    Object {
      "address": "1117 Nekli Glen",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "d1c878c1-1474-5c83-b289-508f75b89a4f",
      "rating": 3.03,
      "reviewCount": 0,
      "title": "Cartwright Inc",
    },
    Object {
      "address": "85 Huvzu Terrace",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "cf34d948-1260-58e3-ad82-1d4335016dc0",
      "rating": 2.54,
      "reviewCount": 0,
      "title": "Trinity",
    },
  ],
  "total": 20,
}
`;

exports[`List Places when rating is provided should succeed 1`] = `
Object {
  "items": Array [
    Object {
      "address": "375 Uciwa Loop",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "55b62c9d-d3f6-5973-80cc-ca2744b0c1a6",
      "rating": 3.42,
      "reviewCount": 0,
      "title": "The Honor Goat",
    },
    Object {
      "address": "1006 Laet Manor",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "dc1884c7-35da-5973-9893-f902839ff6ff",
      "rating": 3.35,
      "reviewCount": 0,
      "title": "The Locket",
    },
    Object {
      "address": "332 Ruvow Path",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "821ea0ca-77af-5dd5-a15f-176fd4ce23a2",
      "rating": 3.12,
      "reviewCount": 0,
      "title": "The Dairy Laguna",
    },
    Object {
      "address": "1117 Nekli Glen",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "d1c878c1-1474-5c83-b289-508f75b89a4f",
      "rating": 3.03,
      "reviewCount": 0,
      "title": "Cartwright Inc",
    },
    Object {
      "address": "85 Huvzu Terrace",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "cf34d948-1260-58e3-ad82-1d4335016dc0",
      "rating": 2.54,
      "reviewCount": 0,
      "title": "Trinity",
    },
  ],
  "total": 5,
}
`;

exports[`List Places without any criteria should succeed 1`] = `
Object {
  "items": Array [
    Object {
      "address": "1915 Uzma Court",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "6bf9374f-8abc-5942-b52e-fff076137298",
      "rating": 4.61,
      "reviewCount": 0,
      "title": "Little China",
    },
    Object {
      "address": "39 Coko Turnpike",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "2d688467-2116-5d95-9195-13083b904496",
      "rating": 3.9,
      "reviewCount": 0,
      "title": "Chapter",
    },
    Object {
      "address": "1528 Aceer Way",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "36241277-6054-5955-a823-6a0706710235",
      "rating": 3.85,
      "reviewCount": 0,
      "title": "The Fire Grove",
    },
    Object {
      "address": "1355 Pogol Parkway",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "08347a44-d09d-58c6-b198-163b9a0ed423",
      "rating": 3.84,
      "reviewCount": 0,
      "title": "The Mountain Vine",
    },
    Object {
      "address": "1230 Cejet Key",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "2230ab56-ca08-55d2-8a82-8ef007547c31",
      "rating": 3.78,
      "reviewCount": 0,
      "title": "The Silk Whale",
    },
    Object {
      "address": "1187 Weskut Ridge",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "d3973942-133b-55e4-920e-7b0033ab9d38",
      "rating": 3.75,
      "reviewCount": 0,
      "title": "The Noodle Farmer",
    },
    Object {
      "address": "1467 Huzwas Highway",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "8242a55b-5a9d-5ca9-b296-eed08dcf2897",
      "rating": 3.57,
      "reviewCount": 0,
      "title": "Amigos",
    },
    Object {
      "address": "134 Medmon Path",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "6b0ceb1b-e72c-5ef8-b0c6-c54455b5aba7",
      "rating": 3.53,
      "reviewCount": 0,
      "title": "Rogue",
    },
    Object {
      "address": "375 Uciwa Loop",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "55b62c9d-d3f6-5973-80cc-ca2744b0c1a6",
      "rating": 3.42,
      "reviewCount": 0,
      "title": "The Honor Goat",
    },
    Object {
      "address": "1006 Laet Manor",
      "canDelete": false,
      "canEdit": false,
      "canReview": false,
      "id": "dc1884c7-35da-5973-9893-f902839ff6ff",
      "rating": 3.35,
      "reviewCount": 0,
      "title": "The Locket",
    },
  ],
  "total": 20,
}
`;
